# Lightseq-ARM

./: CMakeLists.txt  README.md  compile-android.sh  compile-linux-arm.sh  demo.cpp  run.sh
src/models/: CMakeLists.txt  lightseq_model.cpp  lightseq_model.hpp  quant_decoder.cc  quant_decoder.h  quant_encoder.cc  quant_encoder.h  quant_transformer.cc  quant_transformer.h
src/ops/: CMakeLists.txt  activation_add.cc  attention.cc  common.h  embedding.cc  gemm.cc  layernorm.cc  ops.h  quantize.cc
src/ops/chgemm/: CMakeLists.txt  MMult_4x8_22.c  int8kernel_m1.S  int8kernel_m2.S  int8kernel_m4.S  kernel_m4n4k16.S  public.h  reorder_a.S  reorder_b.S  reorder_b.h
src/proto/: CMakeLists.txt  quant_transformer.pb.cc  quant_transformer.pb.h  quant_transformer_weight.cc  quant_transformer_weight.h
src/utils/: CMakeLists.txt  profiler.cc  profiler.h
tests/: CMakeLists.txt  test_op.cc  util.h
